--- a/_includes/offer.liquid
+++ b/_includes/offer.liquid
@@ -57,10 +57,10 @@ Cost
 : {{ offer.cost}}
 
 Web site
-: <a href="{{ offer.curricula_link}}" rel="external">{{ offer.offer_link}}</a>
+: <a href="{{ offer.offer_link}}" rel="external">{{ offer.offer_link}}</a>
 
 Reviews page
-: <a href="{{ offer.curricula_link}}" rel="external">{{ offer.offer_link_reviews}}</a>
+: <a href="{{ offer.offer_link_reviews}}" rel="external">{{ offer.offer_link_reviews}}</a>
         
         
 This information was last updated on {{ offer.offer_info_last_update}}.
