--- a/_includes/css/styles.css
+++ b/_includes/css/styles.css
@@ -104,7 +104,6 @@ main>header {
 
 #left-col .field label {
   display: inline !important;
-  margin-top: 2em;
 }
 
 #offers-list {
@@ -146,7 +145,9 @@ details dt::after {
   font-weight: 700;
 }
 
-
+.field-topic, .field-topic{
+  margin-top: 2em;
+}
 /* 
 details>div{
   margin-bottom: -8px;
