--- a/_includes/css/styles.css
+++ b/_includes/css/styles.css
@@ -145,7 +145,7 @@ details dt::after {
   font-weight: 700;
 }
 
-.field-topic, .field-topic{
+.field-topic, .field-prerequisite{
   margin-top: 2em;
 }
 /* 
