--- a/_includes/wai-curricula.liquid
+++ b/_includes/wai-curricula.liquid
@@ -1,7 +1,7 @@
 <legend>WAI Curricula module{% include resource-link.html label="Curricula on Web Accessibility"
     href="https://www.w3.org/WAI/curricula/" %}</legend>
 
-    <p class="expl">Indicate the WAI Curricula modules covered by this offer.</p>
+    <p class="expl">If applicable, indicate the WAI Curricula modules covered by this offer.</p>
 
 {% for curricula in site.data.wai-curricula %}
 {% include excol.html type="start" id="optional-id" %}
