--- a/_includes/css/styles.css
+++ b/_includes/css/styles.css
@@ -89,6 +89,18 @@ main>header {
   display: inline !important;
 }
 
+.length-label, .length-input{
+  width: 150px;
+  float: left;
+}
+
+.length-label + .length-input{
+  clear: left;
+}
+
+.length-input{
+  float: left;
+}
 
 .button-clear-button {
   margin-bottom: 2em;
