--- a/_includes/offer.liquid
+++ b/_includes/offer.liquid
@@ -65,7 +65,7 @@ Reviews page
         
 This information was last updated on {{ offer.offer_info_last_update}}.
 {% if offer.offer_content_last_update %}
-  The content of this offer was last updated on {{ offer.offer_content_last_update}}.
+  The content of this resource was last updated on {{ offer.offer_content_last_update}}.
 {% endif %} 
 {% include excol.html type="end" %}
 {% include box.html type="end" %}
