--- a/_includes/accessibility-support.liquid
+++ b/_includes/accessibility-support.liquid
@@ -20,3 +20,11 @@
 {% include excol.html type="end" %}
 
 {% endfor %}
+<div>
+    <input type="checkbox" id="offer-other-accessibility-support" name="offer-other-accessibility-support">
+    <label for="offer-other-accessibility-support">Other</label>
+</div>
+<div>
+    <label for="offer-new-accessibility-support" class="visuallyhidden">Other</label>
+    <input type="text" id="offer-new-accessibility-support">
+</div>
