--- a/_includes/accessibility-support.liquid
+++ b/_includes/accessibility-support.liquid
@@ -12,7 +12,8 @@
 {% for option in support.options %}
 <div class="radio-field">
     <input type="checkbox" id="offer-accessibility-support-{{ option.id }}" name="offer-accessibility-support-{{ option.id }}">
-    <label for="offer-accessibility-support-{{ option.id }}">{{ option.name }} - {{option.description}}</label>
+    <label for="offer-accessibility-support-{{ option.id }}">{{ option.name }}</label>
+    <p><em>{{option.description}}</em></p>
 </div>
 
 {% endfor %}
