--- a/_includes/accessibility-support.liquid
+++ b/_includes/accessibility-support.liquid
@@ -7,7 +7,7 @@
 {% endif %} 
 
 {% for option in support.options %}
-<div class="radio-field">
+<div class="radio-field accessibility-support">
     <input type="checkbox" id="offer-accessibility-support-{{ option.id }}" name="offer-accessibility-support-{{ option.id }}">
     <label for="offer-accessibility-support-{{ option.id }}">{{ option.name }}</label>
     <p><em>{{option.description}}</em></p>
@@ -17,10 +17,10 @@
 
 
 {% endfor %}
-<div>
-    <input type="checkbox" id="offer-other-accessibility-support" name="offer-other-accessibility-support">
+<div class="radio-field">
+    <input type="radio" name="offer-other-accessibility-support" id="offer-other-accessibility-support">
     <label for="offer-other-accessibility-support">Other</label>
-</div>
+</div>  
 <div>
     <label for="offer-new-accessibility-support" class="visuallyhidden">Other</label>
     <input type="text" id="offer-new-accessibility-support">
