--- a/_includes/accessibility-support.liquid
+++ b/_includes/accessibility-support.liquid
@@ -10,13 +10,17 @@
 <div class="radio-field accessibility-support">
     <input type="checkbox" id="offer-accessibility-support-{{ option.id }}" name="offer-accessibility-support-{{ option.id }}">
     <label for="offer-accessibility-support-{{ option.id }}">{{ option.name }}</label>
-    <p><em>{{option.description}}</em></p>
+    {% include excol.html type="start" id="optional-id" %}
+    Note
+    {% include excol.html type="middle" %}
+    <p><em>{{option.description}}</em></p> 
+    {% include excol.html type="end" %}
 </div>
 
 {% endfor %}
 
-
 {% endfor %}
+
 <div class="radio-field">
     <input type="radio" name="offer-other-accessibility-support" id="offer-other-accessibility-support">
     <label for="offer-other-accessibility-support">Other</label>
