--- a/_includes/accessibility-support.liquid
+++ b/_includes/accessibility-support.liquid
@@ -8,12 +8,15 @@
 
 {% for option in support.options %}
 <div class="radio-field accessibility-support">
-
 <input type="checkbox" id="offer-accessibility-support-{{ option.id }}" name="offer-accessibility-support-{{ option.id }}">
 <label for="offer-accessibility-support-{{ option.id }}">{{ option.name }}</label>
 </div>
-
+{% include excol.html type="start" %}
+Note
+{% include excol.html type="middle" %}
 <p><em>{{option.description}}</em></p> 
+{% include excol.html type="end" %}
+
 
 {% endfor %}
 
