--- a/_includes/wai-curricula.liquid
+++ b/_includes/wai-curricula.liquid
@@ -1,5 +1,5 @@
 {% for curricula in site.data.wai-curricula %}
-{% include excol.html type="start" id="optional-id" %}
+{% include excol.html type="start" open="true"%}
 {{ curricula.name }}
 <!-- {% capture info_label%}More information about the {{curricula.name}}{% endcapture %}
 {{ curricula.name }}{% include resource-link.html label=info_label href=curricula.link %} -->
