--- a/_includes/accessibility-support.liquid
+++ b/_includes/accessibility-support.liquid
@@ -14,6 +14,7 @@
 </div>
 {% if option.description %}
 <p><em>{{ option.description }}</em></p>
+{% endif %}
 {% endfor %}
 {% include excol.html type="end" %}
 {% endfor %}
