--- a/_includes/accessibility-support.liquid
+++ b/_includes/accessibility-support.liquid
@@ -2,7 +2,7 @@
 
 {% capture support-label %}More information about {{support.name}}{% endcapture %}
 {% include excol.html type="start" open="true"%}
-{{ support.name }}
+<h4>{{ support.name }}</h4>
 {% if support.link%}
 {% include resource-link.html label=support-label href=support.link%}
 {% endif %}
@@ -12,7 +12,6 @@
     <input type="checkbox" id="offer-{{ option.id }}" name="offer-{{ option.id }}">
     <label for="offer-{{ option.id }}">{{ option.name }}</label>
 </div>
-
 {% endfor %}
 {% include excol.html type="end" %}
 {% endfor %}
