--- a/_includes/wai-curricula.liquid
+++ b/_includes/wai-curricula.liquid
@@ -1,6 +1,6 @@
 {% for curricula in site.data.wai-curricula %}
 {% include excol.html type="start" open="true"%}
-{{ curricula.name }}
+<h4>{{ curricula.name }}</h4>
 <!-- {% capture info_label%}More information about the {{curricula.name}}{% endcapture %}
 {{ curricula.name }}{% include resource-link.html label=info_label href=curricula.link %} -->
 
