--- a/_includes/css/styles.css
+++ b/_includes/css/styles.css
@@ -161,11 +161,11 @@ details dt::after {
   margin: 0 0.5em 0 0;
 }
 
-/* .label-input {
+.label-input {
   font-size: 1.25rem;
   font-weight: 700;
 }
- */
+
 .field-topic, .field-prerequisite {
   margin-top: 2em;
 }
