--- a/_includes/accessibility-support.liquid
+++ b/_includes/accessibility-support.liquid
@@ -1,10 +1,10 @@
 {% for support in site.data.accessibility-support %}
 
-{% capture support-label %}More information about {{support.name}}{% endcapture %}
 
-<h4>{{ support.name }}</h4>
 {% if support.link%}
-{% include resource-link.html label=support-label href=support.link%}
+<h4><a href={{support.link}} >{{ support.name }}</a></h4>
+{% else if %}
+<h4>{{ support.name }}</h4>
 {% endif %}
 
 {% for option in support.options %}
