--- a/_includes/accessibility-support.liquid
+++ b/_includes/accessibility-support.liquid
@@ -1,18 +1,20 @@
 {% for support in site.data.accessibility-support %}
 
+{% capture support-label %}More information about {{support.name}}{% endcapture %}
+{% include excol.html type="start" open="true"%}
+{{ support.name }}
 {% if support.link%}
-<h4><a href="{{support.link}}">{{ support.name }}</a></h4>
-{% else if %}
-<h4>{{ support.name }}</h4>
+{% include resource-link.html label=support-label href=support.link%}
 {% endif %}
-
+{% include excol.html type="middle" %}
 {% for option in support.options %}
 <div class="radio-field">
     <input type="checkbox" id="offer-{{ option.id }}" name="offer-{{ option.id }}">
     <label for="offer-{{ option.id }}">{{ option.name }}</label>
 </div>
-{% endfor %}
 
+{% endfor %}
+{% include excol.html type="end" %}
 {% endfor %}
 
 <div class="radio-field">
