--- a/_includes/accessibility-support.liquid
+++ b/_includes/accessibility-support.liquid
@@ -23,7 +23,7 @@
     <input type="checkbox" name="offer-other-accessibility-support" id="offer-other-accessibility-support">
     <label for="offer-other-accessibility-support">Other</label>
 </div>  
-<div>
+<div class="field">
     <label for="offer-new-accessibility-support" class="visuallyhidden">Other</label>
     <input type="text" id="offer-new-accessibility-support">
 </div>
