--- a/_includes/accessibility-support.liquid
+++ b/_includes/accessibility-support.liquid
@@ -15,6 +15,6 @@
 {% endfor %}
 
 <div class="field">
-    <label for="offer-new-accessibility-support">Other</label>
-    <input type="text" id="offer-new-accessibility-support">
+    <label for="offer-new-accessibility-support">Other accessibility supports</label>
+    <textarea id="offer-new-accessibility-support"></textarea>
 </div>
