--- a/_includes/accessibility-support.liquid
+++ b/_includes/accessibility-support.liquid
@@ -15,6 +15,6 @@
 {% endfor %}
 
 <div class="field">
-    <label for="offer-new-accessibility-support">Other accessibility supports</label>
+    <label for="offer-new-accessibility-support">Additional accessibility support</label>
     <textarea id="offer-new-accessibility-support"></textarea>
 </div>
