--- a/_includes/offer.liquid
+++ b/_includes/offer.liquid
@@ -42,7 +42,7 @@ Format
 : {{ offer.format}}
 
 Activities
-: {{ offer.learning | join: ", "}}
+: {{ offer.activities | join: ", "}}
 
 Platform
 : {{ offer.platform}}
