--- a/_includes/offer.liquid
+++ b/_includes/offer.liquid
@@ -61,6 +61,7 @@ Availability
 {% if offer.availability_end_date %}
 to 
 {{ offer.availability_end_date }}
+{% endif %}
 
 Website
 : <a href="{{ offer.offer_link}}" rel="external">{{ offer.offer_link}}</a>
