--- a/_includes/offer.liquid
+++ b/_includes/offer.liquid
@@ -48,7 +48,7 @@ Platform
 : {{ offer.platform}}
 
 Accessibility support
-: {% for support in offer.accessiblity_support %}
+: {% for support in offer.accessibility_support %}
 - {{support.name}}
 {% endfor %}
 
