--- a/_includes/offer.liquid
+++ b/_includes/offer.liquid
@@ -50,7 +50,7 @@ Platform
 Accessibility support
 : {% for support in offer.accessibility_support %}
 
-- {{support.name}}
+: {{support.name}}
 {% endfor %}
 
 Length
