--- a/_includes/offer.liquid
+++ b/_includes/offer.liquid
@@ -49,8 +49,7 @@ Platform
 
 Accessibility support
 : {% for support in offer.accessibility_support %}
-
-: {{support.name}}
+- {{support.name}}
 {% endfor %}
 
 Length
