--- a/_includes/offer.liquid
+++ b/_includes/offer.liquid
@@ -48,8 +48,7 @@ Platform
 : {{ offer.platform}}
 
 Accessibility support
-: 
-{% for support in offer.accessibility_support %} 
+: {% for support in offer.accessibility_support %} 
 * {{support.name}}
 {% endfor %}
 
