--- a/_includes/css/styles.css
+++ b/_includes/css/styles.css
@@ -274,14 +274,14 @@ details>div{
 
 /* quick fix to link contrast - to better discuss */
 
-fieldset label:hover link{
+fieldset label:hover a{
+  color: var(--off-white);
+}
+
+fieldset label:hover a:hover{
+  color: var(--lt-off-white);
+}
+
+fieldset label:hover a:visited{
   color: var(--line-grey);
-}
-
-fieldset label:hover link:hover{
-  color: var(--trans-line-grey);
-}
-
-fieldset label:hover link:visited{
-  color: var(--cloudy);
 }
