--- a/_includes/offer.liquid
+++ b/_includes/offer.liquid
@@ -25,7 +25,7 @@ Topics
   
 WAI Curricula module
 {% if offer.curricula_link %}
-: {{ offer.curricula_correspondence | link_to: offer.curricula_link }}
+: <a href="{{ offer.curricula_link}}" rel="external">{{ offer.curricula_correspondence }}</a>
 {% else %}
 : Not provided
 {% endif %}
@@ -49,7 +49,7 @@ Platform
 
 Accessibility support
 : {% for support in offer.accessibility_support %} 
-* {{support.name | strip_html}} {% endfor %}
+* {{{ support.name }}} {% endfor %}
 
 Length
 : {{ offer.duration}}
