--- a/_includes/offer.liquid
+++ b/_includes/offer.liquid
@@ -48,8 +48,9 @@ Platform
 : {{ offer.platform}}
 
 Accessibility support
+{% capture asup%}{{support.name}}{%endcapture%}
 : {% for support in offer.accessibility_support %} 
-* {{{ support.name }}} {% endfor %}
+* {{asup}}{% endfor %}
 
 Length
 : {{ offer.duration}}
