--- a/_includes/offer.liquid
+++ b/_includes/offer.liquid
@@ -49,7 +49,7 @@ Platform
 
 Accessibility support
 : {% for support in offer.accessibility_support %} 
-* {% raw %}{{{ support.name }}}{% endraw %}{% endfor %}
+* {% raw %}{{ support.name }}{% endraw %}{% endfor %}
 
 Length
 : {{ offer.duration}}
