--- a/_includes/accessibility-support.liquid
+++ b/_includes/accessibility-support.liquid
@@ -1,13 +1,18 @@
-
 {% for support in site.data.accessibility-support %}
 
-
-<h4>{{ support.name }}</h4>
+<h4>{{ support.type }}</h4>
 
 {% for option in support.options %}
 <div class="radio-field">
     <input type="checkbox" id="offer-{{ option.id }}" name="offer-{{ option.id }}">
     <label for="offer-{{ option.id }}">{{ option.name }}</label>
+    {% if option.options %}
+        <p class="expl">Including:</p>
+    {% endif %}
+    {% for details in option.options %}
+        <input type="checkbox" id="offer-{{ option.id }}" name="offer-{{ option.id }}">
+        <label for="offer-{{ option.id }}">{{ option.name }}</label>
+    {% endfor %}
 </div>
 {% endfor %}
 
