--- a/_includes/accessibility-support.liquid
+++ b/_includes/accessibility-support.liquid
@@ -6,12 +6,15 @@
 <div class="radio-field">
     <input type="checkbox" id="offer-{{ option.id }}" name="offer-{{ option.id }}">
     <label for="offer-{{ option.id }}">{{ option.name }}</label>
+</div>    
     {% if option.options %}
         <p class="expl">Including:</p>
     {% endif %}
     {% for details in option.options %}
-        <input type="checkbox" id="offer-{{ details.id }}" name="offer-{{ details.id }}">
-        <label for="offer-{{ details.id }}">{{ details.name }}</label>
+        <div class="radio-field">  
+            <input type="checkbox" id="offer-{{ details.id }}" name="offer-{{ details.id }}">
+            <label for="offer-{{ details.id }}">{{ details.name }}</label>
+        </div>
     {% endfor %}
 </div>
 {% endfor %}
