--- a/_includes/accessibility-support.liquid
+++ b/_includes/accessibility-support.liquid
@@ -3,9 +3,13 @@
 <h4>{{ support.type }}</h4>
 
 {% for option in support.options %}
+{% assign appendedName = option.name %}
+{% if option.options %}
+    {% assign appendedName = appendedName | concat: ", including:"%}
+{% endif %}
 <div class="radio-field">
     <input type="checkbox" id="offer-{{ option.id }}" name="offer-{{ option.id }}">
-    <label for="offer-{{ option.id }}">{{ option.name }}</label>
+    <label for="offer-{{ option.id }}">{{ appendedName }}</label>
 </div>    
     {% if option.options %}
         <p class="expl">Including:</p>
