--- a/_includes/css/styles.css
+++ b/_includes/css/styles.css
@@ -96,6 +96,9 @@ main>header {
 .accessibility-support {
   display: inline !important;
 }
+.indent-right-checkgoup{
+  margin-left: 3em;
+}
 
 .length-container {
   display: flex;
