--- a/_includes/accessibility-support.liquid
+++ b/_includes/accessibility-support.liquid
@@ -11,11 +11,8 @@
     <input type="checkbox" id="offer-{{ option.id }}" name="offer-{{ option.id }}">
     <label for="offer-{{ option.id }}">{{ appendedName }}</label>
 </div>    
-    {% if option.options %}
-        <p class="expl">Including:</p>
-    {% endif %}
     {% for details in option.options %}
-        <div class="radio-field">  
+        <div class="radio-field indent-right-checkgoup">  
             <input type="checkbox" id="offer-{{ details.id }}" name="offer-{{ details.id }}">
             <label for="offer-{{ details.id }}">{{ details.name }}</label>
         </div>
