--- a/_includes/accessibility-support.liquid
+++ b/_includes/accessibility-support.liquid
@@ -5,7 +5,7 @@
 {% for option in support.options %}
 
 {% if option.options %}
-<h5>{{ option.name }}</h5>>
+<h5>{{ option.name }}</h5>
 {% for details in option.options %}
 <div class="radio-field indent-right-checkgoup">  
     <input type="checkbox" id="offer-{{ details.id }}" name="offer-{{ details.id }}">
@@ -15,7 +15,7 @@
 {% else %}
 <div class="radio-field">
     <input type="checkbox" id="offer-{{ option.id }}" name="offer-{{ option.id }}">
-    <label for="offer-{{ option.id }}">{{ appendedName }}</label>
+    <label for="offer-{{ option.id }}">{{ option.name }}</label>
 </div>    
 {% endif %}
 {% endfor %}
