--- a/_includes/accessibility-support.liquid
+++ b/_includes/accessibility-support.liquid
@@ -5,7 +5,7 @@
 {% for option in support.options %}
 
 {% if option.options %}
-<h5>{{ option.name }}, including: </h5>
+<p class="expl">{{ option.name }}, including: </p>
 {% for details in option.options %}
 <div class="radio-field indent-right-checkgoup">  
     <input type="checkbox" id="offer-{{ details.id }}" name="offer-{{ details.id }}">
