--- a/_includes/offer.liquid
+++ b/_includes/offer.liquid
@@ -1,3 +1,4 @@
+{% assign offer = offer_hash[1] %}
 {% capture offer_title %}<a href="{{ offer.offer_link }}">{{ offer.name }}</a> by {{ offer.provider }}{% endcapture %}
 {% capture offer_section_identifier %}aside_{{ offer.id }}{% endcapture %}
 {% capture offer_details_id %}details_{{offer.id}}{% endcapture %}
