--- a/_includes/course.liquid
+++ b/_includes/course.liquid
@@ -30,20 +30,25 @@ WAI Curricula module
 : Not provided
 {% endif %}
 
-{% assign langAvailable = "" | split: "," %}
-{% for language in course.language %}
+{% assign language = "" | split: "," %}
+{% for landIndex in course.language %}
 {% capture langLabel %}
-{{ site.data.lang[language].name }} ({{ site.data.lang[language].nativeName }})
+{{ site.data.lang[landIndex].name }} ({{ site.data.lang[landIndex].nativeName }})
 {% endcapture %}
-{% assign langAvailable = langAvailable | push: langLabel  %} 
+{% assign language = language | push: langLabel  %} 
 {% endfor %}
 Language
-: {{ langAvailable | join: ", "}}
+: {{ language | join: ", "}}
 
-
+{% assign country = "" | split: "," %}
+{% for countryIndex in course.country %}
+{% capture countryLabel %}
+{{ site.data.country[countryIndex].name }} ({{ site.data.country[countryIndex].nativeName }})
+{% endcapture %}
+{% assign country = country | push: countryLabel  %} 
+{% endfor %}
 Country
-{% assign countryIndex = course.country[0] %}
-: {{ site.data.countries[countryIndex].name }} ({{ site.data.countries[countryIndex].nativeName }})
+: {{ country | join: ", "}}
 
 Format
 : {{ course.format}}
