--- a/_includes/course.liquid
+++ b/_includes/course.liquid
@@ -43,7 +43,7 @@ Language
 {% assign country = "" | split: "," %}
 {% for countryIndex in course.country %}
 {% capture countryLabel %}
-{{ site.data.country[countryIndex].name }} ({{ site.data.country[countryIndex].nativeName }})
+{{ site.data.countries[countryIndex].name }} ({{ site.data.countries[countryIndex].nativeName }})
 {% endcapture %}
 {% assign country = country | push: countryLabel  %} 
 {% endfor %}
