course name -> course title

--- a/_includes/course.liquid
+++ b/_includes/course.liquid
@@ -1,4 +1,4 @@
-{% capture course_title %}<a href="{{ course.course_link }}">{{ course.name }}</a> by {{ course.provider }}{% endcapture %}
+{% capture course_title %}<a href="{{ course.course_link }}">{{ course.title }}</a> by {{ course.provider }}{% endcapture %}
 {% capture course_section_identifier %}aside_{{ course.id }}{% endcapture %}
 {% capture course_details_id %}details_{{course.id}}{% endcapture %}
 
