keyword_topics => topics

--- a/_includes/course.liquid
+++ b/_includes/course.liquid
@@ -21,7 +21,7 @@ Prerequisites
 : {{ course.prerequisites | join: ", "}}
 
 Topics
-: {{ course.keywords_topics | join: ", "}}
+: {{ course.topics | join: ", "}}
   
 WAI Curricula module
 {% if course.curricula_link %}
