--- a/_includes/course.liquid
+++ b/_includes/course.liquid
@@ -59,7 +59,7 @@ Format
 : {{ course.format}}
 
 Scheduling
-: {{ course.activities | join: ", "}}
+: {{ course.scheduling | join: ", "}}
 
 Platform
 {% if course.platform %}
