--- a/_includes/course.liquid
+++ b/_includes/course.liquid
@@ -70,8 +70,9 @@ Platform
 : Not provided
 {% endif %}
 
-{% assign obj = site.data.accessibility-support | map: 'id' | where: 'digital-accessibility' %}
+{% assign obj = site.data.accessibility-support | where: "type", "digital-accessibility" %}
 {{ obj | inspect }}
+{{ obj['digital-accessibility'] | inspect }}
 
 Accessibility support
 {% if course.accessibility_support %}
